kubernetes/monitoring/grafana/grafana.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
    sablier.enable: "true"
    sablier.group: grafana
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        task: monitoring
        app: grafana
    spec:
      # Essential
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: la1r.workload/essential
                operator: In
                values:
                - "true"
      containers:
      - name: grafana
        resources:
          requests:
            cpu: 50m
            memory: 56Mi
          limits:
            cpu: 200m
            memory: 256Mi
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
        # - mountPath: /etc/ssl/certs
        #   name: ca-certificates
        #   readOnly: true
        - name: grafana-data
          mountPath: /var/lib/grafana
        # - name: grafana-dashboards
        #   mountPath: /etc/grafana/provisioning/dashboards

      volumes:
      # - name: ca-certificates
        # hostPath:
        #   path: /etc/ssl/certs
        # emptyDir: {}
      - name: grafana-data
        persistentVolumeClaim:
          claimName: grafana-data-claim
      # - name: grafana-dashboards
      #   configMap:
      #     name: grafana-dashboards

---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: grafana

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-https
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "monitoring-sablier-grafana@kubernetescrd"
spec:
  tls:
  - secretName: grafana-bas-tls
  rules:
  - host: grafana.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
